--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   firebase_auth: ^5.1.2
   google_sign_in: ^6.2.1
   line_icons: ^2.0.3
+  shared_preferences: ^2.0.8
 
 dev_dependencies:
   flutter_test:
